# cqlsh

./: .gitignore  README.md  cqlsh  cqlsh.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  trivy.yml
cqlsh/: __main__.py  cqlsh.py
cqlshlib/: __main__.py  cql3handling.py  cqlshmain.py  serverversion.py  util.py
cqlshlib/test/: cqlsh.py
