[metadata]
name = cqlsh
version = 6.0.1
author = Jeff Widman
author_email = jeff@jeffwidman.com
description = cqlsh is a Python-based command-line client for running CQL commands on a cassandra cluster.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cql, cassandra, cqlsh
url = https://github.com/jeffwidman/cqlsh
project_urls =
    Changelog = https://github.com/jeffwidman/cqlsh#changelog
    Documentation = https://cassandra.apache.org/doc/latest/tools/cqlsh.html
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = cqlsh, cqlshlib
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*

# Dependencies are in setup.py for GitHub's dependency graph.

[options.entry_points]
console_scripts =
  cqlsh = cqlsh.__main__:main
